# columnar-database-storage

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
columnar_storage/: __init__.py  blocks.py  catalog.py  checkpoint.py  database.py  segment_tree.py  stats.py  storage.py
docs/: agent_handoff.md  curriculum.md
tests/: __init__.py  test_question_01_catalog.py  test_question_02_segment_tree.py  test_question_03_statistics_and_pointers.py  test_question_04_blocks.py  test_question_05_column_segments.py  test_question_06_row_groups.py  test_question_07_data_table.py  test_question_08_checkpoint.py  test_question_09_database_facade.py  test_question_10_main_demo.py
