[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "columnar-database-storage"
version = "0.1.0"
description = "Educational columnar database storage exercise inspired by DuckDB table storage internals"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "Exercise Generator" }]

[tool.setuptools.packages.find]
include = ["columnar_storage*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
